@@ -1,3 +1,14 @@
+2021-06-22  Eric Carlson  <eric.carlson@apple.com>
+
+        [Cocoa] AVPlayer periodic time observer callback should use weakPtr
+        https://bugs.webkit.org/show_bug.cgi?id=227264
+        rdar://79269047
+
+        Reviewed by Jer Noble.
+
+        * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
+        (WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):
+
 2021-06-22  Alan Bujtas  <zalan@apple.com>
 
         [RenderTreeBuilder] ASSERTION FAILED: m_renderer in FloatingObject::renderer()
